@startuml entitiesV2

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho

title Route du Rome - Entity Model

package "Contracts" {
	interface IDialogueOwner {
		dialogues: IDialogue[]
		currentActiveDialogue: IDialogue | null | undefined
	}

	interface IHero {
		id: string
		name: string
		role: string
		description: string
		bio: string
		portrait: string
		presentationVideo: string
		tags: string[]
		presentationDialogue: IDialogue | null | undefined
		dialogues: IDialogue[]
	}

	interface INpc {
		id: string
		name: string
		icon: string
		job: string
		jobSector: string
		color: string
		portrait: string
		lattitude: number
		longitude: number
		backgroundVideo: string
		jobVideoUrl: string
		videoTitle: string
		presentationDialogue: IDialogue | null
		relatedQuests: IQuest[]
		done: boolean
		accessible: boolean
	}

	interface IBadge {
		id: string
		name: string
		description: string
		icon: string
		color: string
		collected: boolean
		onUnlock: (() => void)[]
		checkUnlockCondition(): boolean
		Unlock(): void
	}

	interface IQuest {
		id: string
		name: string
		description: string
		isCompleted: boolean
		relatedBadge: IBadge | null
		OnQuestActions: (() => void)[]
		checkCompletionCondition(): boolean
		Complete(): void
		Reward(): void
	}

	interface IDialogue {
		readonly id: string
		readonly owner: IDialogueOwner | undefined
		readonly isCompleted: boolean
		readonly isActive: boolean
		readonly currentLineDepth: number
		readonly currentChoiceDepth: number
		readonly rootNode: IDialogueNode | undefined
		readonly currentNode: IDialogueNode | undefined
		OnDialogueActions: (() => void)[]
		CompleteDialogue(): void
		Continue(): boolean
		Choose(choiceID?: string, choiceIndex?: number): void
		Reset(): void
	}

	interface IDialogueNode {
		id: string
		text: string
		nextNode: IDialogueNode | null | undefined
		choices: IChoice[] | null | undefined
		OnStartActions: (() => void)[] | undefined
		OnEndActions: (() => void)[] | undefined
		next(): IDialogueNode | null
	}

	interface IChoice {
		id: string
		text: string
		next: IDialogueNode | null
		actions: (() => void)[] | undefined
		select(): IDialogueNode | null
	}
}

package "Runtime entities" {
	class Hero {
		id: string
		name: string
		role: string
		description: string
		bio: string
		portrait: string
		presentationVideo: string
		presentationDialogue: IDialogue | null | undefined
		tags: string[]
		dialogues: IDialogue[]
		currentActiveDialogue: IDialogue | null | undefined
	}

	class Npc {
		id: string
		name: string
		icon: string
		job: string
		jobSector: string
		color: string
		portrait: string
		lattitude: number
		longitude: number
		backgroundVideo: string
		jobVideoUrl: string
		videoTitle: string
		presentationDialogue: IDialogue | null
		dialogues: IDialogue[]
		relatedQuests: IQuest[]
		currentActiveDialogue: IDialogue | null | undefined
		done: boolean
		accessible: boolean
	}

	class Dialogue {
		-_id: string
		-_owner: IDialogueOwner | undefined
		-_isCompleted: boolean
		-_isActive: boolean
		-_currentLineDepth: number
		-_currentChoiceDepth: number
		-_rootNode: IDialogueNode | undefined
		-_currentNode: IDialogueNode | undefined
		+OnDialogueActions: (() => void)[]
		+CompleteDialogue(): void
		+Continue(): boolean
		+Choose(choiceID?: string, choiceIndex?: number): void
		+Reset(): void
	}

	class DialogueNode {
		root: IDialogueNode | null
		parent: IDialogueNode | IChoice | null
		id: string
		text: string
		nextNode: IDialogueNode | null | undefined
		choices: IChoice[] | null | undefined
		OnStartActions: (() => void)[] | undefined
		OnEndActions: (() => void)[] | undefined
		next(): IDialogueNode | null
	}

	class Choice {
		root: IDialogueNode | null
		parent: IDialogueNode | IChoice | null
		id: string
		text: string
		next: IDialogueNode | null
		actions: (() => void)[] | undefined
		select(): IDialogueNode | null
	}

	class NPCBadge {
		relatedNPC: INpc
		id: string
		name: string
		description: string
		icon: string
		color: string
		collected: boolean
		onUnlock: (() => void)[]
		checkUnlockCondition(): boolean
		Unlock(): void
	}

	class NPCDefaultQuest {
		relatedNPC: INpc
		id: string
		name: string
		description: string
		isCompleted: boolean
		relatedBadge: IBadge | null
		OnQuestActions: (() => void)[]
		checkCompletionCondition(): boolean
		Complete(): void
		Reward(): void
	}
}

package "Configuration DTOs" {
	class ConfigData {
		Npcs: NpcData[]
		Heroes: HeroData[]
		Levels: LevelData[]
	}

	class NpcData {
		id: string
		name: string
		color: string
		job: string
		jobSector: string
		icon: string
		portrait: string
		lattitude: number
		longitude: number
		relatedQuestsIds: string[]
		backgroundVideo: string
		jobVideoUrl: string
		videoTitle: string
		presentationDialogue: DialogueData | null
	}

	class HeroData {
		id: string
		name: string
		role: string
		description: string
		bio: string
		presentationDialogue: DialogueData | null | undefined
		portrait: string
		presentationVideo: string
		tags: string[]
		dialogues: DialogueData[] | undefined
	}

	class DialogueData {
		id: string
		ownerId: string
	}

	class LevelData {
		id: string
		name: string
		description: string
		icon: string
		min: number
		max: number
	}
}

Hero ..|> IHero
Hero ..|> IDialogueOwner
Npc ..|> INpc
Npc ..|> IDialogueOwner
Dialogue ..|> IDialogue
DialogueNode ..|> IDialogueNode
Choice ..|> IChoice
NPCBadge ..|> IBadge
NPCDefaultQuest ..|> IQuest

IDialogueOwner "1" o-- "0..*" IDialogue : owns
IDialogue "1" *-- "1" IDialogueNode : root/current tree
IDialogueNode "0..1" *-- "0..1" IDialogueNode : nextNode
IDialogueNode "1" *-- "0..*" IChoice : choices
IChoice "0..1" o-- "0..1" IDialogueNode : next

Npc "1" o-- "0..*" IQuest : related quests
NPCDefaultQuest "1" --> "1" INpc : relatedNPC
NPCDefaultQuest "0..1" o-- "1" IBadge : relatedBadge
NPCBadge "1" --> "1" INpc : relatedNPC

ConfigData "1" *-- "0..*" NpcData
ConfigData "1" *-- "0..*" HeroData
ConfigData "1" *-- "0..*" LevelData
NpcData "1" o-- "0..1" DialogueData
HeroData "1" o-- "0..*" DialogueData

note left of Dialogue
	DialogueNode and Choice form a tree.
	Dialogue owns the current node and
	advances through Continue or Choose.
end note

note bottom of NPCDefaultQuest
	QuestService creates one default quest
	and one NPCBadge for each NPC.
end note

@enduml
